# SpElT

./: .gitignore  .pre-commit-config.yaml  Align LFP.ipynb  Axona Raw Spike Sorting KS2.ipynb  Generate 5x12-16 probe.ipynb  LFP Analyis.ipynb  NP2 Spike Sorting KS4.ipynb  Place Cell Selection.ipynb  Position Loading & Analysis.ipynb  Pyramidal Cell Selection.ipynb  README.md  Rayleigh Vector Analysis.ipynb  SESSION_MANAGER_GUIDE.md  SpElT.code-workspace  Spike Sorting from Sheet.ipynb  Test NP2.ipynb  Theta Phase Analysis.ipynb  ephys.py  ephys_utils.py  loop_axona_spikeinterface.ipynb  pyproject.toml  setup.py  teste01_220729_67DLC_resnet50_Video_TesteMar20shuffle1_18500.csv  utils.py
analysis/: All Pyramidal Cells Analysis.ipynb  LFP Analyis.ipynb  Place Cell Selection.ipynb  Position Loading & Analysis.ipynb  Position x LFP (single file).ipynb  Rayleigh Vector Analysis.ipynb  Spike Theta Phase x Position.ipynb  Theta Phase Analysis.ipynb  Theta Phase.ipynb  bz_csd.py  ephys_utils.py  frequency_power.py  get_spike_theta_phase.py  get_theta_frequencies.py  get_theta_phase.py  get_traversal_data.py  lfp_analysis.ipynb  position_analysis.py  rayleigh_vector.py  spatial_correlation.py  spatial_information.py  spatial_significance.py
analysis/.ipynb_checkpoints/: Theta Phase-checkpoint.ipynb
analysis/old/: lfp_analysis.ipynb
axona_utils/: postprocess_pos_data.py
axona_utils/probes/: 1x32_buzsaki_oneshank.prb
maps/: direction_rate_maps.py  rate_maps.py
np2_utils/: load_pos_bonsai.py  load_pos_dlc.py  np2_preprocessing.py  postprocess_dlc_data.py
old/: Axona Raw Spike Sorting KS2.ipynb  CSD Analysis.ipynb
postprocessing/: Check Cell Identity.ipynb  Pyramidal Cell Selection.ipynb  Select Clusters All Sessions.ipynb  adaptive_smooth.py  burst_index_and_autocorrelograms.py  postprocess_pos_data.py  rate_maps.py  session_utils.py  spatial_analysis.py
postprocessing/archive/: Check Cell Identity.ipynb
preprocessing/: Generate 5x12-16 probe.ipynb  axona_preprocessing.py  loop_axona_spikeinterface.ipynb  pos_from_bin.py  utils.py
preprocessing/probes/: 16_tetrodes.prb  4x8_buzsaki.prb  4x8_buzsaki_oneshank.prb  5x12_buzsaki_12trodes_only.prb  8_tetrodes.prb
pyscan/: ephys.py  ephys_utils.py  session_utils.py
pyscan/analysis/: get_theta_phase.py  rayleigh_vector.py  spatial_information.py  spatial_significance.py
pyscan/axona_utils/: load_pos_axona.py  postprocess_pos_data.py
pyscan/maps/: rate_maps.py
pyscan/np2_utils/: load_pos_dlc.py  np2_preprocessing.py
sorting_utils/: collect_sessions.py
spelt/: ephys.py  ephys_utils.py  session_utils.py  utils.py
spelt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spelt/: ephys.py  (+3 more)
workflows/: LFP Analyis.ipynb  Place Cell Selection.ipynb  Position Loading & Analysis.ipynb  Rayleigh Vector Analysis.ipynb  loop_axona_spikeinterface.ipynb
(+118 files in other folders)
